manifests/default/resources.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bharatradar
---
apiVersion: v1
kind: Service
metadata:
  name: ingest
  annotations:
    external-dns.alpha.kubernetes.io/hostname: feed.bharat-radar.vellur.in
    load-balancer.hetzner.cloud/location: fsn1
    load-balancer.hetzner.cloud/uses-proxyprotocol: "true"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  internalTrafficPolicy: Local
  externalTrafficPolicy: Local
  selector:
    app: haproxy
  ports:
  - name: beast-1337
    port: 1337
    targetPort: beast-1337
    protocol: TCP
  - name: mlat-1338
    port: 1338
    targetPort: mlat-1338
    protocol: TCP
  - name: beast-30004
    port: 30004
    targetPort: beast-30004
    protocol: TCP
  - name: beast-30005
    port: 30005
    targetPort: beast-30005
    protocol: TCP
  - name: mlat-31090
    port: 31090
    targetPort: mlat-31090
    protocol: TCP
  type: LoadBalancer
---
# allow all network in this namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {}
  egress:
  - {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location /discord {
        return 302 https://discord.gg/3wPfmyNFRq;
      }
      location /todo {
        return 302 https://github.com/ragavellur/infra/issues;
      }
      location /feed {
        return 302 https://github.com/ragavellur/infra?tab=readme-ov-file#feeder;
      }
      location /stats {
        return 302 https://bharat-radar.vellur.in;
      }
      location /metrics {
        return 200 "ok";
      }
      location /graphs1090 {
        return 302 https://bharat-radar.vellur.in;
      }
spec:
  tls:
  - hosts:
    - bharat-radar.vellur.in
    secretName: adsblol-tls
  rules:
  - host: bharat-radar.vellur.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-website
            port:
              number: 80
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: globe-reapi
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  tls:
  - hosts:
    - map.bharat-radar.vellur.in
    secretName: adsblol-tls
  rules:
  - host: map.bharat-radar.vellur.in
    http:
      paths:
      - path: /re-api
        pathType: Prefix
        backend:
          service:
            name: planes-readsb
            port:
              name: http-api
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: tar1090
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location /graphs1090 {
        return 302 https://bharat-radar.vellur.in;
      }
      location /globeRates.json { return 200 "{\"refresh\": 500}" ;}
spec:
  tls:
  - hosts:
    - map.bharat-radar.vellur.in
    secretName: adsblol-tls
  rules:
  - host: map.bharat-radar.vellur.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: planes-readsb
            port:
              name: http
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: api
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  tls:
  - hosts:
    - api.bharat-radar.vellur.in
    secretName: adsblol-tls
  rules:
  - host: api.bharat-radar.vellur.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              name: http
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: my
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  tls:
  - hosts:
    - my.bharat-radar.vellur.in
    secretName: adsblol-tls
  rules:
  - host: my.bharat-radar.vellur.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              name: api-internal
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: history
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  tls:
  - hosts:
    - history.bharat-radar.vellur.in
    secretName: adsblol-tls
  rules:
  - host: history.bharat-radar.vellur.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: history
            port:
              name: http-nginx
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: map
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    nginx.ingress.kubernetes.io/app-root: /syncmap
spec:
  tls:
  - hosts:
    - mlat.bharat-radar.vellur.in
    secretName: adsblol-tls
  rules:
  - host: mlat.bharat-radar.vellur.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mlat-map
            port:
              name: http
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              name: http
---
# Rewrite /synctable/0A/ to /synctable/all/
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: map-table
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /synctable/all/$2
spec:
  tls:
  - hosts:
    - mlat.bharat-radar.vellur.in
    secretName: adsblol-tls
  rules:
  - host: mlat.bharat-radar.vellur.in
    http:
      paths:
      - path: /synctable/0A(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: mlat-map
            port:
              name: http
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-this
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector: {}
  - from:
    - ipBlock:
        cidr: 10.0.0.0/16
    - ipBlock:
        cidr: 0.0.0.0/0
